# delta-crdt-decomposition

./: .clang-tidy  .gitignore  2pset.h  Makefile  README.md  awset.h  gset.cpp  gset.h  lwwset.h  meson.build  test_2pset.cpp  test_awset.cpp  test_gset.cpp  test_lwwset.cpp
include/: 2pset.h
tests/: test_2pset.cpp  test_gset.cpp  test_lwwset.cpp
